# lakerobotics

./: .gitignore  README.md  setup.sh
lrapplications/src/blink2/: CMakeLists.txt  blink.cpp
lrapplications/src/blink_cube/: CMakeLists.txt  blink.cpp  blink_cube.cmake
lrapplications/src/enginectrl/: CMakeLists.txt  FreeRTOS-openocd.cpp  canhandler.cpp  canhandler.h  cantable.cpp  circular_buffer.c  circular_buffer.h  debughelper.cpp  debughelper.h  encoder.cpp  encoder.h  enginectrl.cmake  errorcodes.h  fast_pid.cpp  fast_pid2.cpp  fast_pid2.h  globalobjects.cpp  globalobjects.h  hbridge.cpp  hbridge.h  hwtest_tasks.cpp  hwtest_tasks.h  main.cpp  main_tasks.cpp  main_tasks.h  measurement.cpp  measurement.h  motorcontrol.cpp  motorcontrol.h  parametermodel.cpp  parametermodel.h  processmodel.cpp  processmodel.h
lrapplications/src/enginectrl/lib_bsp_enginectrl_cube/: CMakeLists.txt  custom_board.c  custom_board.h  lib_bsp_enginectrl_cube.cmake  lib_bsp_enginectrl_cube_exp.cmake
lrapplications/src/enginectrl/lib_bsp_enginectrl_cube/hal/: adc.c  adc.h  can.c  can.h  gpio.c  gpio.h  main.c  main.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h  tim.c  tim.h  usart.c  usart.h
lrapplications/src/pwrmanager/: CMakeLists.txt  canconfig.h  canhandler.cpp  canhandler.h  common.h  datahandler.cpp  datahandler.h  display_ui.cpp  display_ui.h  hwconfig.h  main.cpp  measurement.cpp  measurement.h  pwrcontrol.cpp  pwrcontrol.h  pwrmanager.cmake  pwrmanager.cpp  pwrmanager.h  remotectrl.cpp  remotectrl.h
lrapplications/tools/can_commander/: CANcommander.sln  CMakeLists.txt
lrapplications/tools/can_commander/CAN_USBTin/: CANMessage.cpp  CANMessage.h  CAN_USBTin.cpp  CAN_USBTin.h  CAN_USBTin.vcxproj  CAN_USBTin.vcxproj.filters  can_usbtin_global.h
lrapplications/tools/can_commander/CANcommander/: CANcommander.cpp  CANcommander.h  CANcommander.qrc  CANcommander.ui  CANcommander.vcxproj  CANcommander.vcxproj.filters  MainWindow.cpp  MainWindow.h  main.cpp
lrapplications/tools/can_commander/CANcommander/Accquire/: CANProcessorThread.cpp  CANProcessorThread.h  CANThreadManager.cpp  CANThreadManager.h
lrapplications/tools/can_commander/CANcommander/Model/: AbstractUIModelItem.cpp  AbstractUIModelItem.h  CANMessageObject.h  CANModel.cpp  ModelRepository.cpp  ModelRepository.h  ProjectDefaultModel.cpp  ProjectModel.cpp  ProjectModelHWInterface.cpp  ProjectModelItem.h
lrapplications/tools/can_commander/CANcommander/Resources/: CANcommander.qrc
lrapplications/tools/can_commander/CANcommander/Ui/: QuickTraceAction.cpp  QuickTraceAction.h  UIRepository.cpp  UIRepository.h  canhwinterfaceoptiondlg.cpp  canhwinterfaceoptiondlg.h  cantracewindow.cpp  cantracewindow.h  cantracewindow.ui
lrapplications/tools/can_commander/CANcommander/Widgets/: ProjectExplorerWidget.cpp  ProjectExplorerWidget.h
lrapplications/tools/can_commander/CANcore/: CANcore.cpp  CANcore.h  CANcore.vcxproj  CANcore.vcxproj.filters  CMakeLists.txt  Utils.cpp  Utils.h  XmlSettings.cpp  XmlSettings.h  cancore_global.h
lrapplications/tools/can_commander/CANcore/CAN/: CANHandlerThread.cpp  CANHandlerThread.h  CANMessage.cpp  CANMessage.h  ICANProcessor.h  USBtin.cpp  USBtin.h
lrapplications/tools/can_commander/CANcore/Utils/: Utils.cpp  Utils.h  XmlSettings.cpp  XmlSettings.h
lrplatform/src/libraries/lib_control/: CMakeLists.txt  lib_control_exp.cmake
lrplatform/src/libraries/lib_control/autopid/: AutoPID.cpp  AutoPID.h  lib_autopid.cmake  lib_autopid_exp.cmake
lrplatform/src/libraries/lib_control/fastpid/: FastPID.cpp  lib_fastpid.cmake  lib_fastpid_exp.cmake
lrplatform/src/libraries/lib_control/pid/: TimedPID.cpp  lib_pid.cmake  lib_pid_exp.cmake
lrplatform/src/libraries/lib_io/: CMakeLists.txt  lib_io_exp.cmake
lrplatform/src/libraries/lib_io/ads1110/: ADS1110.cpp  ADS1110.h  lib_ads1110.cmake  lib_ads1110_exp.cmake
lrplatform/src/libraries/lib_io/ads1x15/: Adafruit_ADS1015.cpp  Adafruit_ADS1015.h  lib_ads1x15.cmake  lib_ads1x15_exp.cmake
lrplatform/src/libraries/lib_io/freqcount/: lib_freqcount.cmake  lib_freqcount_exp.cmake
lrplatform/src/libraries/lib_io/freqmeas/: lib_freqmeas.cmake  lib_freqmeas_exp.cmake
lrplatform/src/libraries/lib_io/mcp23008/: Adafruit_MCP23008.cpp  lib_mcp23008.cmake  lib_mcp23008_exp.cmake
lrplatform/src/libraries/lib_io/mcp23017/: Adafruit_MCP23017.h  lib_mcp23017.cmake  lib_mcp23017_exp.cmake
lrplatform/src/libraries/lib_io/mcp3008/: Adafruit_MCP3008.cpp  lib_mcp3008.cmake  lib_mcp3008_exp.cmake
lrplatform/src/libraries/lib_io/mcp3221/: MCP3221.h  lib_mcp3221.cmake  lib_mcp3221_exp.cmake
lrplatform/src/libraries/lib_io/shifty/: Shifty.cpp  lib_shifty.cmake  lib_shifty_exp.cmake
lrplatform/src/libraries/lib_ui/: CMakeLists.txt  lib_ui_exp.cmake
lrplatform/src/libraries/lib_ui/hid/: lib_hid.cmake  lib_hid_exp.cmake
lrplatform/src/libraries/lib_ui/keyboard/: Keyboard.h  lib_keyboard.cmake  lib_keyboard_exp.cmake
lrplatform/src/libraries/lib_ui/lcd/: lib_lcd.cmake  lib_lcd_exp.cmake
lrplatform/src/libraries/lib_ui/oledgfx/: lib_oledgfx.cmake  lib_oledgfx_exp.cmake
lrplatform/src/libraries/lib_ui/ssd1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  lib_ssd1306.cmake  lib_ssd1306_exp.cmake
lrplatform/src/libraries/lib_util/: CMakeLists.txt  lib_util_exp.cmake
lrplatform/src/libraries/lib_util/arduinostl/: lib_arduinostl.cmake  lib_arduinostl_exp.cmake  serstream
lrplatform/src/libraries/lib_util/base64/: lib_base64.cmake  lib_base64_exp.cmake
lrplatform/src/libraries/lib_util/bitbool/: BitBool.cpp  lib_bitbool.cmake  lib_bitbool_exp.cmake
lrplatform/src/libraries/lib_util/bufferutils/: lib_bufferutils.cmake  lib_bufferutils_exp.cmake
lrplatform/src/libraries/lib_util/cbuffer/: BufferDummy.cpp  CircularBuffer.h  lib_cbuffer.cmake  lib_cbuffer_exp.cmake
lrplatform/src/libraries/lib_util/cmdparser/: lib_cmdparser.cmake  lib_cmdparser_exp.cmake
lrplatform/src/libraries/lib_util/convert/: CMakeLists.txt  cmake_lib_convert.sh  lib_convert.cmake  lib_convert_exp.cmake
lrtools/cantools/: dump_frames.py
(+345 files in other folders)
